force-app/main/default/objects/cgcloud__Query_Validation__mdt/cgcloud__Query_Validation__mdt.object-meta.xml
<CustomObject>
    <description>Specifies business validation rules on the dynamically generated UI Components on the &apos;client-side&apos; based on user input.</description>
    <label>Query Validation</label>
    <pluralLabel>Query Validations</pluralLabel>
</CustomObject>