force-app/main/default/objects/cgcloud__Query_Validation__mdt/fields/cgcloud__Condition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition__c</fullName>
    <label>Condition</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank</fullName>
                <default>true</default>
                <label>Source Is Blank</label>
            </value>
            <value>
                <fullName>!Blank</fullName>
                <label>Source Is Not Blank</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
                <label>Source Is Greater Than Target</label>
            </value>
            <value>
                <fullName>&gt;=</fullName>
                <label>Source Is Greater or Equal to Target</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
                <label>Source Is Lesser Than Target</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
                <label>Source Is Lesser or Equal to Target</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>