force-app/main/default/objects/cgcloud__Query_Validation__mdt/fields/cgcloud__Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Execution_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The order in which the validation rules get validated</description>
    <label>Execution Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>