force-app/main/default/objects/cgcloud__Query_Validation__mdt/fields/cgcloud__Is_Source_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Source_Custom_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether source uses custom label to display error messages</description>
    <label>Is Source Custom Label</label>
    <type>Checkbox</type>
</CustomField>