force-app/main/default/objects/cgcloud__Query_Validation__mdt/fields/cgcloud__Is_Target_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Target_Custom_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Target uses custom label to display its error messages</description>
    <label>Is Target Custom Label</label>
    <type>Checkbox</type>
</CustomField>