force-app/main/default/objects/cgcloud__Query_Validation__mdt/fields/cgcloud__Source__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source__c</fullName>
    <label>Source</label>
    <referenceTo>cgcloud__Query_UI__mdt</referenceTo>
    <relationshipLabel>Query Validations</relationshipLabel>
    <relationshipName>Query_Validations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>