force-app/main/default/objects/cgcloud__Query_Validation__mdt/fields/cgcloud__Source_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Error_Message__c</fullName>
    <label>Source Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>