force-app/main/default/objects/cgcloud__Query_Validation__mdt/fields/cgcloud__Source_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Type__c</fullName>
    <description>Source data type</description>
    <label>Source Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>