force-app/main/default/objects/cgcloud__Query_Validation__mdt/fields/cgcloud__Target__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target__c</fullName>
    <description>Target UI</description>
    <label>Target</label>
    <referenceTo>cgcloud__Query_UI__mdt</referenceTo>
    <relationshipLabel>Query Validations (Target)</relationshipLabel>
    <relationshipName>Query_Validations1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>